updating my branch

--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <title>TODO List</title>
 </head>
 <body>
-
-    
+    <header>
+        <h1>Lista de tarefas</h1>
+    </header>
+    <div class="container">
+        <form id="form">
+            <input type="text" placeholder="Nome da tarefa" required autocomplete="off" size="30" id="newtask">
+            <button type="submit">Adicionar</button>
+        </form>
+        <div class="center">
+            <ul>
+                <!--
+                    <li class="li">New item</li>
+                -->
+            </ul>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="./main.js"></script>    
 </body>
